--- a/styles.css
+++ b/styles.css
@@ -583,3 +583,53 @@ header .search-form{
     background-image: url(tony-lee-8IKf54pc3qk-unsplash.jpg);
   }
 }
+/* Hide fallback by default */
+.ios-bg {
+  display: none;
+}
+
+/* iOS Safari fallback */
+@supports (-webkit-touch-callout: none) {
+  .home {
+    position: relative;
+    overflow: hidden;
+    background: none !important; /* disable broken bg animation */
+  }
+
+  .ios-bg {
+    display: block;
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    animation: fadeImages 25s infinite;
+  }
+
+  .ios-bg:nth-child(1) {
+    background-image: url("coffee_cappuccino_cup_136699_3840x2400.jpg");
+    animation-delay: 0s;
+  }
+  .ios-bg:nth-child(2) {
+    background-image: url("wp9277593-cafe-4k-wallpapers.jpg");
+    animation-delay: 5s;
+  }
+  .ios-bg:nth-child(3) {
+    background-image: url("coffee_cappuccino_cup_115928_3840x2400.jpg");
+    animation-delay: 10s;
+  }
+  .ios-bg:nth-child(4) {
+    background-image: url("coffee_drink_powder_119246_3840x2400.jpg");
+    animation-delay: 15s;
+  }
+  .ios-bg:nth-child(5) {
+    background-image: url("tony-lee-8IKf54pc3qk-unsplash.jpg");
+    animation-delay: 20s;
+  }
+
+  @keyframes fadeImages {
+    0%, 20% { opacity: 1; }
+    25%, 100% { opacity: 0; }
+  }
+}
